<resources>
    <string name="app_name">CulturApp</string>
    <string-array name="languages">
        <item>ES</item>
        <item>EN</item>
        <item>CA</item>
        <item>JA</item>
    </string-array>
    <string name="eventos">Eventos</string>
    <string name="chat">Chat</string>
    <string name="reservas">Reservas</string>
    <string name="ajustes">Ajustes</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="contra">Contraseña</string>
    <string name="conf_contra">Confirmar Contraseña</string>
    <string name="nueva">Nueva contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="cambiar">Cambiar contraseña</string>
    <string name="olvidado">¿Has olvidado la contraseña?</string>
    <string name="cuenta">¿No tienes cuenta?</string>
    <string name="buscar">Buscar eventos</string>
    <string name="filtro">Filtro</string>
    <string name="crear">Crear evento</string>
    <string name="nombre_evento">Nombre del evento</string>
    <string name="fechaInicio">Fecha y hora inicio:</string>
    <string name="fechaFinal">Fecha y hora final:</string>
    <string name="tipo">Tipo:</string>
    <string name="sala">Sala:</string>
    <string name="precio">Precio:</string>
    <string name="entradas">Entradas</string>
    <string name="total">Totales:</string>
    <string name="disponibles">Disponibles:</string>
    <string name="descripcion">Descripción</string>
    <string name="reservar">Reservar</string>
    <string name="mensaje">Mensaje</string>
    <string name="cancelarReserva">Cancelar reserva</string>
    <string name="generales">Ajustes generales</string>
    <string name="oscuro">Modo oscuro</string>
    <string name="claro">Modo claro</string>
    <string name="datos">Cambiar datos</string>
    <string name="conf_cambios">Confirmar cambios</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="cancelar">Cancelar</string>
    <string name="completa">Completa todos los campos</string>
    <string name="errorCambioDatos">Error al cambiar los nuevos datos</string>
    <string name="errorContra">Error al cambiar la contraseña</string>
    <string name="noCoincide">La contraseña no coincide</string>
    <string name="correoContra">Debes poner un correo y una contraseña</string>
    <string name="errorLogin">Error al iniciar sesión</string>
    <string name="errorRegistro">Error al registrar el usuario</string>
    <string name="errorFecha">Fecha inválida</string>
    <string name="entradasValido">Introduce un número de entradas válido</string>
    <string name="noQuedan">No quedan tantas entradas disponibles</string>
    <string name="ponEntradas">Introduce un número de entradas</string>
    <string name="errorReserva">Error al guardar la reserva</string>
    <string name="errorCrearEvento">Error al crear evento</string>
    <string name="errorDatos">Error al cargar los datos</string>
    <string name="todos">Todos</string>
    <string name="errorVerEventos">Error al mostrar los eventos</string>
    <string name="errorEntradasDispo">Error al obtener entradas disponibles</string>
    <string name="yaTienes">Ya tienes una reserva para este evento</string>
    <string name="errorVerificar">Error al verificar reservas</string>
    <string name="errorVerReservas">Error al mostrar las reservas</string>
</resources>