<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <Spinner
        android:id="@+id/spIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_personalizado"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="15dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        android:layout_marginTop="75dp"/>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:textColorHint="@color/grisOscuro"
        android:textColor="@color/negro"
        android:fontFamily="@font/dmseriftextregular"
        android:background="@drawable/edittext_personalizado"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/txtContra"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/contra"
        android:textColorHint="@color/grisOscuro"
        android:textColor="@color/negro"
        android:fontFamily="@font/dmseriftextregular"
        android:inputType="textPassword"
        android:background="@drawable/edittext_personalizado"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olvidado"
            android:fontFamily="@font/dmseriftextregular"
            android:textColor="?attr/colorOnBackground"/>

        <TextView
            android:id="@+id/lblContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:textColor="@color/azul"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:layout_marginStart="3dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/registroLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_perso_azul"
                android:fontFamily="@font/alkatrabariablefontwght"
                android:text="@string/iniciar"
                android:textColor="@color/negro"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/registroLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="75dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuenta"
                android:fontFamily="@font/dmseriftextregular"
                android:textColor="?attr/colorOnBackground"/>

            <TextView
                android:id="@+id/lblRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrar"
                android:textColor="@color/azul"
                android:fontFamily="@font/alkatrabariablefontwght"
                android:layout_marginStart="3dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>