<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/topbar"
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre de usuario"
            android:textSize="45sp"
            android:textColor="@color/negro"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:gravity="center_horizontal"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generales"
            android:textSize="30sp"
            android:textColor="@color/negro"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:gravity="center_horizontal"/>

        <Spinner
            android:id="@+id/spIdioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_personalizado"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oscuro"
                android:textSize="25sp"
                android:textColor="@color/negro"
                android:fontFamily="@font/alkatrabariablefontwght"
                android:layout_marginEnd="5dp"/>

            <Switch
                android:id="@+id/customSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:textSize="30sp"
            android:textColor="@color/negro"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:textColorHint="@color/grisOscuro"
                android:textColor="@color/negro"
                android:fontFamily="@font/dmseriftextregular"
                android:textStyle="bold"
                android:background="@drawable/edittext_personalizado"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:maxLines="1" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos"
                android:textColorHint="@color/grisOscuro"
                android:textColor="@color/negro"
                android:fontFamily="@font/dmseriftextregular"
                android:background="@drawable/edittext_personalizado"
                android:padding="10dp"
                android:maxLines="1" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:textColorHint="@color/grisOscuro"
                android:textColor="@color/negro"
                android:fontFamily="@font/dmseriftextregular"
                android:background="@drawable/edittext_personalizado"
                android:padding="10dp"
                android:layout_marginVertical="20dp"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCambiar"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/conf_cambios"
                android:textSize="18sp"
                android:fontFamily="@font/alkatrabariablefontwght"
                android:textStyle="bold"
                android:background="@drawable/boton_perso_azul"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:textSize="30sp"
            android:textColor="@color/negro"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/txtContra"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/contra"
            android:textColorHint="@color/grisOscuro"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"
            android:background="@drawable/edittext_personalizado"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:maxLines="1" />

        <EditText
            android:id="@+id/txtConfirmar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:hint="@string/conf_contra"
            android:textColorHint="@color/grisOscuro"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"
            android:background="@drawable/edittext_personalizado"
            android:padding="10dp"
            android:layout_marginVertical="20dp"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContra"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:textSize="18sp"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:textStyle="bold"
            android:background="@drawable/boton_perso_azul"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCerrar"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:textSize="18sp"
            android:fontFamily="@font/alkatrabariablefontwght"
            android:textStyle="bold"
            android:textColor="@color/blanco"
            android:background="@drawable/boton_perso_rojo"
            app:drawableEndCompat="@drawable/cerrar_sesion"
            android:paddingHorizontal="50dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/navbar"
            android:id="@+id/navbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
