<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txtNombreEvento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_personalizado"
        android:hint="@string/nombre_evento"
        android:textColor="@color/negro"
        android:textSize="40sp"
        android:fontFamily="@font/alkatrabariablefontwght"
        android:layout_marginVertical="15dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaInicio"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/txtFechaInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:hint="yyyy-mm-dd 00:00"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:digits="0123456789-: "
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaFinal"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/txtFechaFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:hint="yyyy-mm-dd 00:00"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:digits="0123456789-: "
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:inputType="number"
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sala"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <Spinner
            android:id="@+id/spSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entradas"
        android:textColor="?colorOnBackground"
        android:textSize="30sp"
        android:fontFamily="@font/alkatrabariablefontwght"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="?colorOnBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmseriftextregular"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/txtEntradas"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_personalizado"
            android:textColor="@color/negro"
            android:textSize="20sp"
            android:fontFamily="@font/dmseriftextregular"
            android:inputType="number"
            android:paddingVertical="7dp"
            android:paddingHorizontal="15dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:textColor="?colorOnBackground"
        android:textSize="30sp"
        android:fontFamily="@font/alkatrabariablefontwght"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_personalizado"
        android:textColor="@color/negro"
        android:textSize="20sp"
        android:fontFamily="@font/dmseriftextregular"
        android:paddingVertical="7dp"
        android:paddingHorizontal="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCrear"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/crear"
        android:textSize="18sp"
        android:fontFamily="@font/alkatrabariablefontwght"
        android:textStyle="bold"
        android:textColor="@color/negro"
        android:background="@drawable/boton_perso_azul"
        android:layout_marginBottom="20dp"/>

</LinearLayout>