<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blanco"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/evento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lupa_negra"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventos"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_negro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendario_negro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservas"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ajustes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginStart="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ajustes_negro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajustes"
            android:textColor="@color/negro"
            android:fontFamily="@font/dmseriftextregular"/>

    </LinearLayout>
</LinearLayout>
